--- a/RentACarProject/RentACarProject.csproj
+++ b/RentACarProject/RentACarProject.csproj
@@ -73,6 +73,12 @@
     <Compile Include="FrmAracListeleme.Designer.cs">
       <DependentUpon>FrmAracListeleme.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmIstatistik.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmIstatistik.Designer.cs">
+      <DependentUpon>FrmIstatistik.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmMusteriEkle.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -125,6 +131,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmAracListeleme.resx">
       <DependentUpon>FrmAracListeleme.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmIstatistik.resx">
+      <DependentUpon>FrmIstatistik.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMusteriEkle.resx">
       <DependentUpon>FrmMusteriEkle.cs</DependentUpon>
