--- a/RentACarProject/RentACarProject.csproj
+++ b/RentACarProject/RentACarProject.csproj
@@ -73,6 +73,12 @@
     <Compile Include="FrmAracListeleme.Designer.cs">
       <DependentUpon>FrmAracListeleme.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmGiris.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmGiris.Designer.cs">
+      <DependentUpon>FrmGiris.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmIstatistik.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,6 +120,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TblAdmin.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="TblArac.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -131,6 +140,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmAracListeleme.resx">
       <DependentUpon>FrmAracListeleme.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmGiris.resx">
+      <DependentUpon>FrmGiris.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmIstatistik.resx">
       <DependentUpon>FrmIstatistik.cs</DependentUpon>
